# sdk-python

./: pyproject.toml
.github/workflows/: publish.yml  python-package.yml
carbonate/: api.py  browser.py  sdk.py  test_decorator.py  webdriver.py
carbonate_sdk/: sdk.py  webdriver.py
resources/: carbonate.js
test/end2end/webdriver/: test_input.py  test_notfound.py  test_render.py  test_render_cached.py  test_select.py  test_wait.py  test_wait_cached.py  test_wait_failed.py  test_whitelist.py  webdriver_test.py
test/end2end/webdriver/test_render_cached/test_it_should_wait_for_renders_to_finish_for_actions/: the input should have the contents teststr.json
test/end2end/webdriver/test_render_cached/test_it_should_wait_for_renders_to_finish_for_assertions/: there should be a label with the text test.json
test/end2end/webdriver/test_wait_cached/test_it_should_wait_for_fetch/: the input should have the contents teststr.json
test/end2end/webdriver/test_wait_cached/test_it_should_wait_for_xhr_before_performing_assertions/: the input should be empty.json
test/end2end/webdriver/test_wait_cached/test_it_should_wait_for_xhr_for_assertions/: the input should be empty.json
test/fixtures/: failing_test.py  render.html  wait_xhr.html  whitelist_fetch.html  whitelist_xhr.html
test/full/: test_carbonate_test_form.py
