[tool.poetry]
name = "carbonate-python"
version = "0.1.0"
description = "Run UI tests using AI"
authors = ["Carbonate <team@cabonate.dev>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.14"
requests = "^2.28.2"
selenium = "^4.8.3"
webdriver-manager = "^3.8.6"
unittest-data-provider = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
